--- a/src/index.html
+++ b/src/index.html
@@ -967,14 +967,47 @@
             <h2 class="text-[40px] family-medium text-white mb-3">Upcoming Educatinal Events</h2>
             <p class="text-xl family-normal text-white mb-14">Let's Learn together</p>
           </div>
-          <div class="bg-white rounded-xl p-5 flex justify-between items-center gap">
+          <div class="bg-white rounded-xl py-5 ps-5 pe-[50px] flex justify-between items-center gap mb-[10px]">
             <div class="flex items-center gap-[50px]">
-              <img class="w-[200px] h-auto" src="" alt="">
-              <div>
-                123
+              <img class="w-[200px] h-auto" src="./assets/images/cheif.png" alt="">
+              <div class="flex flex-col gap-5 ">
+                <div class="text-night family-medium text-[26px]">Explorations of Regional Chief Executive Network</div>
+                <div class="flex items-center gap-[45px]">
+                  <div class=" flex items-center gap-2 "> <img class=" h-[18px] w-[18px] mb-1" src="./assets/images/calendar.svg" alt=""> <div class="text-lg text-indigo">13th Dec 2024</div> </div>
+                  <div class=" flex items-center gap-2 "><img class=" h-[18px] w-[18px] mb-1 " src="./assets/images/clock.svg" alt=""> <div class="text-lg text-indigo">09:00 PM</div> </div>
+                  <div class=" flex items-center gap-2 "><img class=" h-[18px] w-[18px] mb-1" src="./assets/images/location.svg" alt=""> <div class="text-lg text-indigo">Washington DC, EK 3642</div> </div>
+                </div>
               </div>
             </div>
-
+            <a href="#" class="btn-light text-night">Get Started</a>
+          </div>
+          <div class="bg-white rounded-xl py-5 ps-5 pe-[50px] flex justify-between items-center gap mb-[10px]">
+            <div class="flex items-center gap-[50px]">
+              <img class="w-[200px] h-auto" src="./assets/images/student.png" alt="">
+              <div class="flex flex-col gap-5 ">
+                <div class="text-night family-medium text-[26px]">Virtual Spring Part-time Fair for Student</div>
+                <div class="flex items-center gap-[45px]">
+                  <div class=" flex items-center gap-2  "> <img class=" h-[18px] w-[18px] mb-1" src="./assets/images/calendar.svg" alt=""> <div class="text-lg text-indigo">27th Dec 2024</div> </div>
+                  <div class=" flex items-center gap-2 "><img class=" h-[18px] w-[18px] mb-1 " src="./assets/images/clock.svg" alt=""> <div class="text-lg text-indigo">07:00 PM</div> </div>
+                  <div class=" flex items-center gap-2 "><img class=" h-[18px] w-[18px] mb-1" src="./assets/images/location.svg" alt=""> <div class="text-lg text-indigo">New York City, PA 17401</div> </div>
+                </div>
+              </div>
+            </div>
+            <a href="#" class="btn-light text-night">Get Started</a>
+          </div>
+          <div class="bg-white rounded-xl py-5 ps-5 pe-[50px] flex justify-between items-center gap mb-[10px]">
+            <div class="flex items-center gap-[50px]">
+              <img class="w-[200px] h-auto" src="./assets/images/scratch.png" alt="">
+              <div class="flex flex-col gap-5 ">
+                <div class="text-night family-medium text-[26px]">Write A Novel Outline From Scratch</div>
+                <div class="flex items-center gap-[45px]">
+                  <div class=" flex items-center gap-2  "> <img class=" h-[18px] w-[18px] mb-1" src="./assets/images/calendar.svg" alt=""> <div class="text-lg text-indigo">16th Dec 2024</div> </div>
+                  <div class=" flex items-center gap-2 "><img class=" h-[18px] w-[18px] mb-1 " src="./assets/images/clock.svg" alt=""> <div class="text-lg text-indigo">02:00 PM</div> </div>
+                  <div class=" flex items-center gap-2 "><img class=" h-[18px] w-[18px] mb-1" src="./assets/images/location.svg" alt=""> <div class="text-lg text-indigo">Washington DC, EK 3642</div> </div>
+                </div>
+              </div>
+            </div>
+            <a href="#" class="btn-light text-night">Get Started</a>
           </div>
         </div>
       </div>
