--- a/src/index.html
+++ b/src/index.html
@@ -1324,9 +1324,8 @@
         </div>
       </div>
       <div class="meetControls">
-        <!-- Dots -->
         <div
-          class="dots [&>ul]:flex [&>ul]:gap-[5px] [&>ul>li>button]:h-4 [&>ul>li>button]:w-4 [&>ul>li]:text-[0] [&>ul>li>button]:rounded-xl [&>ul>li>button]:bg-white [&>ul>li>button]:hover:bg-mango">
+          class="dots [&>ul]:flex [&>ul]:gap-[5px] [&>ul>li>button]:h-4 [&>ul>li>button]:w-4 [&>ul>li]:text-[0] [&>ul>li>button]:rounded-xl [&>ul>li>button]:bg-white [&>ul>li>button:hover]:bg-mango">
         </div>
       </div>
     </div>
@@ -1376,92 +1375,12 @@
             </div>
           </div>
         </div>
-        <div class="group relative">
-          <img class="relative w-full h-auto" src="./assets/images/kristin.png" alt="">
-          <div
-            class="absolute flex justify-center items-center top-[10px] right-[10px] w-[66px] h-[66px] bg-white rounded-full shadow-[0px_4px_4px_0px_rgba(0,0,0,0.025)]  ">
-            <img class="w-[26px] h-[32px]" src="./assets/images/share.svg" alt="">
-          </div>
-          <div class="py-[10px]  px-[10px]  absolute bottom-0 w-full">
-            <div class=" bg-white py-[18px] px-[10px]">
-              <div class="text-center text-night text-3xl faily-medium">Kristin Watson</div>
-              <div class="text-center text-indigo text-xl family-normal">Marketing Expert</div>
-              <div
-                class="group-hover:flex  mt-[18px]  bg-white border-t-2 border-[#E8E8E8]  pt-[18px] px-[10px] hidden justify-center items-center flex-col gap-5">
-                <div class="flex items-center gap-[27px]">
-                  <div class="flex items-center gap-[7px]">
-                    <img src="./assets/images/book.svg" alt="">
-                    <div>2 courses</div>
-                  </div>
-                  <div class="flex items-center gap-[7px]">
-                    <img src="./assets/images/book.svg" alt="">
-                    <div>8 Students</div>
-                  </div>
-                </div>
-                <a href="#" class="btn-light text-night">View Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="group relative">
-          <img class="relative w-full h-auto" src="./assets/images/miller.png" alt="">
-          <div
-            class="absolute flex justify-center items-center top-[10px] right-[10px] w-[66px] h-[66px] bg-white rounded-full shadow-[0px_4px_4px_0px_rgba(0,0,0,0.025)]  ">
-            <img class="w-[26px] h-[32px]" src="./assets/images/share.svg" alt="">
-          </div>
-          <div class="py-[10px]  px-[10px]  absolute bottom-0 w-full">
-            <div class=" bg-white py-[18px] px-[10px]">
-              <div class="text-center text-night text-3xl faily-medium">Millar Richard</div>
-              <div class="text-center text-indigo text-xl family-normal">UX/UI Designer</div>
-              <div
-                class="group-hover:flex  mt-[18px]  bg-white border-t-2 border-[#E8E8E8]  pt-[18px] px-[10px] hidden justify-center items-center flex-col gap-5">
-                <div class="flex items-center gap-[27px]">
-                  <div class="flex items-center gap-[7px]">
-                    <img src="./assets/images/book.svg" alt="">
-                    <div>2 courses</div>
-                  </div>
-                  <div class="flex items-center gap-[7px]">
-                    <img src="./assets/images/book.svg" alt="">
-                    <div>8 Students</div>
-                  </div>
-                </div>
-                <a href="#" class="btn-light text-night">View Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="group relative">
-          <img class="relative w-full h-auto" src="./assets/images/miller.png" alt="">
-          <div
-            class="absolute flex justify-center items-center top-[10px] right-[10px] w-[66px] h-[66px] bg-white rounded-full shadow-[0px_4px_4px_0px_rgba(0,0,0,0.025)]  ">
-            <img class="w-[26px] h-[32px]" src="./assets/images/share.svg" alt="">
-          </div>
-          <div class="py-[10px]  px-[10px]  absolute bottom-0 w-full">
-            <div class=" bg-white py-[18px] px-[10px]">
-              <div class="text-center text-night text-3xl faily-medium">Millar Richard</div>
-              <div class="text-center text-indigo text-xl family-normal">UX/UI Designer</div>
-              <div
-                class="group-hover:flex  mt-[18px]  bg-white border-t-2 border-[#E8E8E8]  pt-[18px] px-[10px] hidden justify-center items-center flex-col gap-5">
-                <div class="flex items-center gap-[27px]">
-                  <div class="flex items-center gap-[7px]">
-                    <img src="./assets/images/book.svg" alt="">
-                    <div>2 courses</div>
-                  </div>
-                  <div class="flex items-center gap-[7px]">
-                    <img src="./assets/images/book.svg" alt="">
-                    <div>8 Students</div>
-                  </div>
-                </div>
-                <a href="#" class="btn-light text-night">View Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </div>
       <div class="studentControls">
         <!-- Dots -->
         <div
-          class="dots [&>ul]:flex [&>ul]:gap-[5px] [&>ul>li>button]:h-4 [&>ul>li>button]:w-4 [&>ul>li]:text-[0] [&>ul>li>button]:rounded-xl [&>ul>li>button]:bg-white [&>ul>li>button]:hover:bg-mango">
+          class="dots [&>ul]:flex [&>ul]:gap-[5px] [&>ul>li>button]:h-4 [&>ul>li>button]:w-4 [&>ul>li]:text-[0] [&>ul>li>button]:rounded-xl [&>ul>li>button]:bg-white [&>ul>li>button:hover]:bg-mango">
         </div>
       </div>
       <!-- Real Student Stories End -->
