--- a/src/index.html
+++ b/src/index.html
@@ -1533,7 +1533,7 @@
             <div class="flex items-center justify-between mt-5">
               <div class="inline-flex items-center gap-2.5">
                 <span
-                  class="text-[16px] text-white family-normal px-5 py-[4px] rounded-[20px] bg-indigo">Education</span>
+                  class="text-[16px] text-white family-normal px-5 py-[4px] rounded-[20px] bg-indigo ">Education</span>
               </div>
               <div class="inline-flex items-center gap-2">
                 <img src="assets/images/calendar.svg" class="" alt="lessons">
@@ -1550,22 +1550,85 @@
     </div>
     <!--  blogs end -->
     <!-- footer start -->
-    <div class="bg-[#2B2E47] pt-[90px] pb-[90px]">
+    <div class="bg-[#2B2E47] pt-[90px]">
       <div class="text-center">
         <h2 class="text-[40px] family-medium text-white mb-[10]">Get our every news & blogs</h2>
       </div>
       <div class="flex justify-center items-center ">
-        <div class="border-b  py-5 flex justify-between items-center gap-2 max-w-[780px] w-full">
+        <div class="border-b   border-indigo py-5 flex justify-between items-center gap-2 max-w-[780px] w-full">
           <img src="./assets/images/calendar.svg" alt="" srcset="">
-          <input class="grow bg-transparent border-none family-normal text-lg" placeholder="Enter Your Email" type="email">
+          <input class="grow bg-transparent border-none family-normal text-lg outline-0 text-indigo" placeholder="Enter Your Email Address" type="email">
           <img class="w-[30px] h-[30px]" src="./assets/images/sendingarrow.svg" alt="">
         </div>
       </div>
-      <div class="container mx-auto">
-        <div class="grid grid-cols-12">
-          <div class="col-span-5">1</div>
-          <div class="col-span-7">2</div>
+      <div class="container mx-auto border-b border-indigo">
+        <div class="grid grid-cols-12 pt-[71px] pb-[90px]">
+          <div class="col-span-5">
+            <div class="flex justify-start gap-[23px] flex-col">
+              <img class="w-[141px] h-[24px]" src="./assets/images/students-white.svg" alt="" srcset="">
+              <p class="max-w-[298px] text-white text-[16px] family-normal ">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                et dolore magna aliqua.
+              </p>
+                <div class=" flex gap-2 ">
+                  <a class="bg-[#333753] rounded-full p-[10px]" href=""> <img  class="h-[16px] w-[16px]" src="./assets/images/in.svg" alt=""> </a>
+                  <a class="bg-[#333753] rounded-full p-[10px]" href=""> <img  class="h-[16px] w-[16px]" src="./assets/images/insta.svg" alt=""> </a>
+                  <a class="bg-[#333753] rounded-full p-[10px]" href=""> <img  class="h-[16px] w-[16px]" src="./assets/images/twitter.svg" alt=""> </a>
+                  <a class="bg-[#333753] rounded-full p-[10px]" href=""> <img class="h-[16px] w-[16px]" src="./assets/images/f.svg" alt=""> </a>
+                </div>
+            </div>
+        
+          </div>
+          <div class="col-span-7">
+            <div class="grid grid-cols-12">
+              <div class="col-span-4">
+                <div class="flex flex-col gap-3">
+                  <div class="family-medium text-[22px] text-white mb-[12px]">Explore</div>
+                  <a class="family-normal text-[16px] text-white" href="">About Us</a>
+                  <a class="family-normal text-[16px] text-white" href="">Upcoming Events</a>
+                  <a class="family-normal text-[16px] text-white" href="">Blogs & News</a>
+                  <a class="family-normal text-[16px] text-white" href="">FAQ Questions</a>
+                  <a class="family-normal text-[16px] text-white" href="">Testimonials</a>
+                  <a class="family-normal text-[16px] text-white" href="">Privacy Policy</a>
+                </div>
+
+              </div>
+              <div class="col-span-4">
+                <div class="flex flex-col gap-3">
+                  <div class="family-medium text-[22px] text-white mb-[12px]">Useful Links</div>
+                  <a class="family-normal text-[16px] text-white" href="">Contact us</a>
+                  <a class="family-normal text-[16px] text-white" href="">Pricing Plan</a>
+                  <a class="family-normal text-[16px] text-white" href="">Gallery</a>
+                  <a class="family-normal text-[16px] text-white" href="">Instructor</a>
+                  <a class="family-normal text-[16px] text-white" href="">Purchase Guide</a>
+                </div>
+                </div>
+                <div class="col-span-4">
+                  <div class="flex flex-col gap-3">
+                    <div class="family-medium text-[22px] text-white mb-[12px]">Contact Info</div>
+                    <div class="flex gap-3">
+                      <img class="h-[16px] w-[16px]" src="./assets/images/phone.svg" alt="">
+                      <div class="family-normal text-[16px] text-white">800 257 752 000</div>
+                    </div>
+                    <div class="flex gap-3">
+                      <img class="h-[16px] w-[16px]" src="./assets/images/email.svg" alt="">
+                      <div class="family-normal text-[16px] text-white">info@yourdomain.com</div>
+                    </div>
+                    <div class="flex gap-3">
+                      <img class="h-[16px] w-[16px] text-mango" src="./assets/images/location-mango.svg" alt="">
+                      <div class="family-normal text-[16px] text-white">72 Brewery LaneSan Pablo, CA 94806</div>
+                    </div>
+                    <a class="btn-solid text-night bg-mango hover:bg-zero hover:text-white border-mango hover:border-zero text-[16px]"
+                    href="">login / signup <img class="ms-[10px] w-[22px]" src="./assets/images/arrow-black.svg" alt=""> </a>
+                    <a href="btn-solid"></a>
+                  </div>
+                  </div>
+            </div>
+          </div>
         </div>
+      </div>
+      <div class="pt-[28px] pb-[30px] text-center text-white text-lg family-normal">
+        Copyright 202 - Studentwp Theme by WP Tech
       </div>
      
     </div>
