--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="bg-night">
     <!-- ? HEADER START -->
-    <div class="relative z-[1200] container mx-auto">
+    <!-- <div class="relative z-[1200] container mx-auto">
       <div class="flex items-center justify-end py-6">
         <a href="#" class="text-white hover:text-mango family-light text-lg inline-flex items-center gap-[10px]"><img
             src="assets/images/phone.svg" alt="" /> 800 257 752 000</a>
@@ -93,13 +93,13 @@
         </button>
         <a href="#" class="btn-light">Get Started</a>
       </div>
-    </div>
+    </div> -->
     <!-- ? HEADER END -->
     <!-- ~ Banner Start -->
     <div class="group/banner py-16 relative">
       <div class="grid grid-cols-12 absolute right-0 w-full z-[1]">
-        <div class="col-span-6"></div>
-        <div class="col-span-6 relative z-[15]">
+        <div class="col-span-6 "></div>
+        <div class="col-span-6  relative z-[15]">
           <div class="grid grid-cols-7 gap-[10px]">
             <div class="col-span-2">
               <div
@@ -217,11 +217,11 @@
       </div>
       <!-- ^ Courses Filters Start -->
       <div class="grid grid-cols-12 gap-6 mb-10">
-        <div class="col-span-4">
+        <div class="col-span-12 md:col-span-6 lg:col-span-4">
           <input type="text" placeholder="Search"
             class="h-[60px] w-full bg-white rounded-md !outline-none !ring-0 px-5 text-lg placeholder:[#6E81B6]">
         </div>
-        <div class="col-span-2">
+        <div class="col-span-6 md:col-span-4 lg:col-span-2">
           <div class="multiSelectDropper">
             <span>
               All Category
@@ -261,7 +261,7 @@
             </div>
           </div>
         </div>
-        <div class="col-span-2">
+        <div class="col-span-6 md:col-span-4 lg:col-span-2">
           <div class="multiSelectDropper">
             <span>
               Trending
@@ -285,7 +285,7 @@
             </div>
           </div>
         </div>
-        <div class="col-span-2">
+        <div class="col-span-6 md:col-span-4 lg:col-span-2 ">
           <div class="multiSelectDropper">
             <span>
               Level
@@ -309,7 +309,7 @@
             </div>
           </div>
         </div>
-        <div class="col-span-2">
+        <div class="col-span-6 md:col-span-4 lg:col-span-2">
           <div class="multiSelectDropper">
             <span>
               Price
@@ -340,7 +340,7 @@
       </div>
       <!-- ^ Courses Filters End -->
       <div class="grid grid-cols-12 gap-6">
-        <div class="col-span-4">
+        <div class="col-span-12 md:col-span-6 lg:col-span-4">
           <div class="bg-white p-5 rounded-xl shadow-[0_5px_30px_0_rgba(0,0,0,0.06)]">
             <img src="assets/images/cardMedia1.png" class="w-full rounded-lg aspect-[16/10] object-cover" alt="cardImg">
             <div class="flex items-center justify-between mt-5">
@@ -388,7 +388,7 @@
             <a href="#" class="btn-light w-full text-night">View Course</a>
           </div>
         </div>
-        <div class="col-span-4">
+        <div class="col-span-12 md:col-span-6 lg:col-span-4">
           <div class="bg-white p-5 rounded-xl shadow-[0_5px_30px_0_rgba(0,0,0,0.06)]">
             <img src="assets/images/bannerEl3.jpeg" class="w-full rounded-lg aspect-[16/10] object-cover" alt="cardImg">
             <div class="flex items-center justify-between mt-5">
@@ -436,7 +436,7 @@
             <a href="#" class="btn-light w-full text-night">View Course</a>
           </div>
         </div>
-        <div class="col-span-4">
+        <div class="col-span-12 md:col-span-6 lg:col-span-4">
           <div class="bg-white p-5 rounded-xl shadow-[0_5px_30px_0_rgba(0,0,0,0.06)]">
             <img src="assets/images/cardMedia3.png" class="w-full rounded-lg aspect-[16/10] object-cover" alt="cardImg">
             <div class="flex items-center justify-between mt-5">
@@ -484,7 +484,7 @@
             <a href="#" class="btn-light w-full text-night">View Course</a>
           </div>
         </div>
-        <div class="col-span-4">
+        <div class="col-span-12 md:col-span-6 lg:col-span-4">
           <div class="bg-white p-5 rounded-xl shadow-[0_5px_30px_0_rgba(0,0,0,0.06)]">
             <img src="assets/images/bannerEl4.jpeg" class="w-full rounded-lg aspect-[16/10] object-cover" alt="cardImg">
             <div class="flex items-center justify-between mt-5">
@@ -532,7 +532,7 @@
             <a href="#" class="btn-light w-full text-night">View Course</a>
           </div>
         </div>
-        <div class="col-span-4">
+        <div class="col-span-12 md:col-span-6 lg:col-span-4">
           <div class="bg-white p-5 rounded-xl shadow-[0_5px_30px_0_rgba(0,0,0,0.06)]">
             <img src="assets/images/cardMedia2.png" class="w-full rounded-lg aspect-[16/10] object-cover" alt="cardImg">
             <div class="flex items-center justify-between mt-5">
@@ -580,7 +580,7 @@
             <a href="#" class="btn-light w-full text-night">View Course</a>
           </div>
         </div>
-        <div class="col-span-4">
+        <div class="col-span-12 md:col-span-6 lg:col-span-4">
           <div class="bg-white p-5 rounded-xl shadow-[0_5px_30px_0_rgba(0,0,0,0.06)]">
             <img src="assets/images/bannerEl2.jpeg" class="w-full rounded-lg aspect-[16/10] object-cover" alt="cardImg">
             <div class="flex items-center justify-between mt-5">
@@ -641,18 +641,18 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
           </p>
         </div>
-        <div class="tabs mb-16">
+        <div class="tabs lg:flex-row flex-col mb-16">
           <button class="tab-link active" data-tab="bi">Best Industry Leaders</button>
           <button class="tab-link" data-tab="lo">Learn Online at Your Own Pace</button>
           <button class="tab-link" data-tab="pc">Professional Certification</button>
         </div>
 
         <div id="bi" class="tab-content block">
-          <div class="grid grid-cols-12 gap-20 items-center">
-            <div class="col-span-5">
+          <div class="grid grid-cols-12 lg:gap-20 gap-0 items-center">
+            <div class="lg:col-span-5 col-span-12">
               <img src="assets/images/tabMedia.svg" class="w-full" alt="" />
             </div>
-            <div class="col-span-7">
+            <div class="lg:col-span-7 col-span-12">
               <h2 class="text-[40px] family-medium text-white mb-3">
                 Best Industry Leaders
               </h2>
@@ -665,11 +665,11 @@
         </div>
 
         <div id="lo" class="tab-content hidden">
-          <div class="grid grid-cols-12 gap-20 items-center">
-            <div class="col-span-5">
+          <div class="grid grid-cols-12 lg:gap-20 gap-0 items-center">
+            <div class="lg:col-span-5 col-span-12">
               <img src="assets/images/tabMedia.svg" class="w-full" alt="" />
             </div>
-            <div class="col-span-7">
+            <div class="lg:col-span-7 col-span-12">
               <h2 class="text-[40px] family-medium text-white mb-3">
                 Learn Online!
               </h2>
@@ -683,11 +683,11 @@
         </div>
 
         <div id="pc" class="tab-content hidden">
-          <div class="grid grid-cols-12 gap-20 items-center">
-            <div class="col-span-5">
+          <div class="grid grid-cols-12 lg:gap-20 gap-0 items-center">
+            <div class="lg:col-span-5 col-span-12">
               <img src="assets/images/tabMedia.svg" class="w-full" alt="" />
             </div>
-            <div class="col-span-7">
+            <div class="lg:col-span-7 col-span-12">
               <h2 class="text-[40px] family-medium text-white mb-3">
                 Professional Certification
               </h2>
