6:39pm friday  19april
6:39pmfriday19april

--- a/src/homepage-02.html
+++ b/src/homepage-02.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-  <div class="bg-night">
+  <div class="bg-white">
     <!-- ? HEADER START -->
-    <!-- <div class="relative z-[1200] container mx-auto">
+    <div class="relative z-[1200] container mx-auto">
       <div class="flex items-center justify-end py-6">
         <a href="#" class="text-white hover:text-mango family-light text-lg inline-flex items-center gap-[10px]"><img
             src="assets/images/phone.svg" alt="" /> 800 257 752 000</a>
@@ -93,10 +93,30 @@
         </button>
         <a href="#" class="btn-light">Get Started</a>
       </div>
-    </div> -->
+    </div>
     <!-- ? HEADER END -->
     <!-- ~ Banner Start -->
-    <div class="group/banner py-16 relative">
+    <div class="hompage2Bg bg-cover bg-center w-full bg-no-repeat pt-[202px] pb-[178px] flex justify-center">
+      <div class="flex justify-center flex-col items-center gap-[31px]">
+        <div class="">
+          <div class="text-[30px] family-medium text-white text-center">Welcome Education Home</div>
+          <div class="text-[60px] family-bold text-white text-center">Education Opens up the Mind</div>
+        </div>
+        <a class="btn-solid text-night bg-mango hover:bg-zero hover:text-white border-mango hover:border-zero text-[16px]" href="">Explore All Courses</a>
+      </div>
+    </div>
+    <div class="bg-night">
+      <div class="container mx-auto">
+        <div class="grid grid-cols-12 py-[77px]">
+          <div class="col-span-4">
+            1
+          </div>
+          <div class="col-span-4">1</div>
+          <div class="col-span-4">1</div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="group/banner py-16 relative">
       <div class="grid grid-cols-12 absolute right-0 w-full z-[1]">
         <div class="col-span-6 "></div>
         <div class="col-span-6  relative z-[15]">
@@ -148,7 +168,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- ~ Banner End -->
     <!-- ! Tiles Start -->
     <div class="container mx-auto">
