--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
     <div class="group/banner py-16 relative">
       <div class="grid grid-cols-12 absolute right-0 w-full z-[1]">
         <div class="col-span-6 "></div>
-        <div class="col-span-6  relative z-[15]">
+        <div class="col-span-6 relative z-[15]">
           <div class="grid grid-cols-7 gap-[10px]">
             <div class="col-span-2">
               <div
@@ -1452,13 +1452,8 @@
       </div>
       <div class="studentControls">
         <!-- Dots -->
-        <div
-          class="dots [&>ul]:flex [&>ul]:gap-[5px] [&>ul>li>button]:h-4 [&>ul>li>button]:w-4 [&>ul>li]:text-[0] [&>ul>li>button]:rounded-xl [&>ul>li>button]:bg-white [&>ul>li>button:hover]:bg-mango">
-        </div>
+        <div class="arrows text-5xl [&>i]:text-white flex gap-2"></div>
       </div>
-
-
-
     </div>
     <!-- Real Student Stories End -->
     <!-- Banner -->
@@ -1737,7 +1732,7 @@
         // You can unslick at a given breakpoint now by adding:
         // settings: "unslick"
         // instead of a settings object 
-      ]
+      ],
     });
   </script>
 
