--- a/src/homepage-01.html
+++ b/src/homepage-01.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="bg-night">
+  <div class="bg-Shell">
     <!-- ? HEADER START -->
     <!-- <div class="relative z-[1200] container mx-auto">
       <div class="flex items-center justify-end py-6">
@@ -140,8 +140,8 @@
       <div class="container relative z-10 mx-auto pt-24 pb-32">
         <div class="grid grid-cols-12">
           <div class="col-span-5">
-            <h1 class="text-white family-medium text-[60px] capitalize leading-snug">Education Opens up the Mind</h1>
-            <p class="family-normal text-lg text-white mt-4 mb-8">Inspiring courses for the life you want to lead.
+            <h1 class="text-night family-medium text-[60px] capitalize leading-snug">Education Opens up the Mind</h1>
+            <p class="family-normal text-lg text-night mt-4 mb-8">Inspiring courses for the life you want to lead.
               Discover our fresh approach to a life-changing
               educational adventure.</p>
             <a href="#" class="btn-solid">Get Started Now</a>
@@ -211,8 +211,8 @@
     <!-- * Home Courses Start -->
     <div class="container mx-auto py-40">
       <div class="text-center">
-        <h2 class="text-[40px] family-medium text-white mb-3">Courses to get you started</h2>
-        <p class="text-xl family-normal text-white mb-14">Consectetur adipiscing elit sed do eiusmod tempor incididunt
+        <h2 class="text-[40px] family-medium text-night mb-3">Courses to get you started</h2>
+        <p class="text-xl family-normal text-night mb-14">Consectetur adipiscing elit sed do eiusmod tempor incididunt
           ut labore et dolore</p>
       </div>
       <!-- ^ Courses Filters Start -->
@@ -631,13 +631,12 @@
       </div>
     </div>
     <!-- * Home Courses End -->
-
     <!-- ? WHY CHOOSE US Start -->
-    <div class="container mx-auto text-white">
+    <div class="container mx-auto text-night">
       <div class="w-full rounded-xl bg-cover bg-center bg-no-repeat gradientBg px-[90px] pt-[60px] pb-[90px]">
         <div class="text-center">
-          <h2 class="text-[40px] family-medium text-white mb-3">Why Choose Us?</h2>
-          <p class="text-xl family-normal text-white mb-14">
+          <h2 class="text-[40px] family-medium text-night mb-3">Why Choose Us?</h2>
+          <p class="text-xl family-normal text-night mb-14">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
           </p>
         </div>
@@ -653,13 +652,14 @@
               <img src="assets/images/tabMedia.svg" class="w-full" alt="" />
             </div>
             <div class="lg:col-span-7 col-span-12">
-              <h2 class="text-[40px] family-medium text-white mb-3">
+              <h2 class="text-[40px] family-medium text-night mb-3">
                 Best Industry Leaders
               </h2>
-              <p class="text-xl family-normal text-white mb-8">
+              <p class="text-xl family-normal text-night mb-8">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua.
               </p>
+              <a href="#" class="btn-outline">Get Started Now</a>
             </div>
           </div>
         </div>
@@ -670,10 +670,10 @@
               <img src="assets/images/tabMedia.svg" class="w-full" alt="" />
             </div>
             <div class="lg:col-span-7 col-span-12">
-              <h2 class="text-[40px] family-medium text-white mb-3">
+              <h2 class="text-[40px] family-medium text-night mb-3">
                 Learn Online!
               </h2>
-              <p class="text-xl family-normal text-white mb-8">
+              <p class="text-xl family-normal text-night mb-8">
                 Baptisum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua.
               </p>
@@ -688,10 +688,10 @@
               <img src="assets/images/tabMedia.svg" class="w-full" alt="" />
             </div>
             <div class="lg:col-span-7 col-span-12">
-              <h2 class="text-[40px] family-medium text-white mb-3">
+              <h2 class="text-[40px] family-medium text-night mb-3">
                 Professional Certification
               </h2>
-              <p class="text-xl family-normal text-white mb-8">
+              <p class="text-xl family-normal text-night mb-8">
                 Another text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua.
               </p>
@@ -705,8 +705,8 @@
     <!-- ! Study at your Own PACE START -->
     <div class="container mx-auto py-40">
       <div class="text-center">
-        <h2 class="text-[40px] family-medium text-white mb-3">Study at Your Own Pace</h2>
-        <p class="text-xl family-normal text-white mb-14">Boost Your Career by Learning Skills in High Demand</p>
+        <h2 class="text-[40px] family-medium text-night mb-3">Study at Your Own Pace</h2>
+        <p class="text-xl family-normal text-night mb-14">Boost Your Career by Learning Skills in High Demand</p>
       </div>
       <div class="grid grid-cols-12 gap-6 mb-10">
         <div class="lg:col-span-4 md:col-span-6 col-span-12">
@@ -719,7 +719,7 @@
                 <img src="assets/images/starPointer.svg" class="h-14 w-auto group-hover/study:h-10 sleek" alt="img">
               </div>
               <h4
-                class="px-0 group-hover/study:px-10 text-white text-3xl family-medium group-hover/study:text-night sleek">
+                class="px-0 group-hover/study:px-10 text-night text-3xl family-medium group-hover/study:text-night sleek">
                 Experience</h4>
               <div
                 class="opacity-0 group-hover/study:opacity-100 h-0 overflow-hidden group-hover/study:h-[280px] px-10">
@@ -756,7 +756,7 @@
                 <img src="assets/images/graduationCap.svg" class="h-14 w-auto group-hover/study:h-10 sleek" alt="img">
               </div>
               <h4
-                class="px-0 group-hover/study:px-10 text-white text-3xl family-medium group-hover/study:text-night sleek">
+                class="px-0 group-hover/study:px-10 text-night text-3xl family-medium group-hover/study:text-night sleek">
                 Education</h4>
               <div
                 class="opacity-0 group-hover/study:opacity-100 h-0 overflow-hidden group-hover/study:h-[280px] px-10">
@@ -793,7 +793,7 @@
                 <img src="assets/images/certificates.svg" class="h-14 w-auto group-hover/study:h-10 sleek" alt="img">
               </div>
               <h4
-                class="px-0 group-hover/study:px-10 text-white text-3xl family-medium group-hover/study:text-night sleek">
+                class="px-0 group-hover/study:px-10 text-night text-3xl family-medium group-hover/study:text-night sleek">
                 Certificate</h4>
               <div
                 class="opacity-0 group-hover/study:opacity-100 h-0 overflow-hidden group-hover/study:h-[280px] px-10">
@@ -826,8 +826,8 @@
     <!-- * Popular Subjects Start -->
     <div class="container mx-auto pb-40">
       <div class="text-center">
-        <h2 class="text-[40px] family-medium text-white mb-3">Popular Subject To Learn</h2>
-        <p class="text-xl family-normal text-white mb-14">Consectetur adipiscing elit sed do eiusmod tempor incididunt
+        <h2 class="text-[40px] family-medium text-night mb-3">Popular Subject To Learn</h2>
+        <p class="text-xl family-normal text-night mb-14">Consectetur adipiscing elit sed do eiusmod tempor incididunt
           ut labore et dolore</p>
       </div>
       <div class=" flex  gap-5 pb-5 w-full whitespace-nowrap overflow-x-auto x-scroll">
@@ -919,7 +919,7 @@
     </div>
     <!-- !watch Now End -->
     <!-- form Start-->
-    <div class="container mx-auto text-white pb-40">
+    <div class="container mx-auto text-night pb-40">
       <div class="w-full rounded-xl bg-cover bg-center bg-no-repeat gradientBg lg:p-[60px] px-[10px] py-[20px] mb-[62px]">
         <div class="grid grid-cols-12">
           <div class="lg:col-span-5 col-span-12">
@@ -978,8 +978,8 @@
       <div class="grid grid-cols-12 gap-5">
         <div class="lg:col-span-6 col-span-12">
           <div class="pt-[46px] pl-[44px] pb-[51px] rounded-lg getstartedBanner bg-cover bg-no-repeat ">
-            <div class=" family-medium text-xl mb-[14px] ">New Certificates</div>
-            <div class="family-normal text-3xl mb-[31px]">
+            <div class=" family-medium text-xl mb-[14px] text-white ">New Certificates</div>
+            <div class="family-normal text-3xl mb-[31px] text-white">
               Online Courses from <br> student University
             </div>
             <a href="#" class="btn-light text-white">Get Started Now</a>
@@ -987,8 +987,8 @@
         </div>
         <div class="lg:col-span-6 col-span-12">
           <div class="pt-[46px] pl-[44px] pb-[51px] rounded-lg getstartedBanner2 bg-cover bg-no-repeat ">
-            <div class=" family-medium text-xl mb-[14px] ">New Collections</div>
-            <div class="family-normal text-3xl mb-[31px]">
+            <div class=" family-medium text-xl mb-[14px] text-white">New Collections</div>
+            <div class="family-normal text-3xl mb-[31px] text-white">
               Online Courses from <br> student University
             </div>
             <a href="#" class="btn-light text-white">Get Started Now</a>
@@ -1000,16 +1000,16 @@
     <!-- form End -->
     <!-- Educational Events Start -->
     <div class="bg-cover bg-center bg-no-repeat gradientBg">
-      <div class="container mx-auto text-white pt-[131px] pb-[141px] ">
+      <div class="container mx-auto text-night pt-[131px] pb-[141px] ">
         <div class="text-center">
-          <h2 class="text-[40px] family-medium text-white mb-3">Upcoming Educatinal Events</h2>
-          <p class="text-xl family-normal text-white mb-14">Let's Learn together</p>
+          <h2 class="text-[40px] family-medium text-night mb-3">Upcoming Educatinal Events</h2>
+          <p class="text-xl family-normal text-night mb-14">Let's Learn together</p>
         </div>
         <div class="bg-white rounded-xl py-5 ps-5 pe-[50px] flex justify-between items-center xl:flex-row flex-col mb-[10px]">
           <div class="flex items-center lg:flex-row flex-col lg:gap-[50px] gap-0">
             <img class="w-[200px] h-auto" src="./assets/images/cheif.png" alt="">
             <div class="flex flex-col gap-5 ">
-              <div class="text-night family-medium text-[26px] text-center">Explorations of Regional Chief Executive Network</div>
+              <div class="text-night family-medium text-[26px] md:text-start text-center">Explorations of Regional Chief Executive Network</div>
               <div class="flex items-center md:gap-[45px] gap-[10px] md:flex-row flex-col">
                 <div class=" flex items-center gap-2 "> <img class=" h-[18px] w-[18px] mb-1"
                     src="./assets/images/calendar.svg" alt="">
@@ -1032,7 +1032,7 @@
           <div class="flex items-center lg:flex-row flex-col lg:gap-[50px] gap-0">
             <img class="w-[200px] h-auto" src="./assets/images/student.png" alt="">
             <div class="flex flex-col gap-5 ">
-              <div class="text-night family-medium text-[26px] text-center">Virtual Spring Part-time Fair for Student</div>
+              <div class="text-night family-medium text-[26px] md:text-start text-center">Virtual Spring Part-time Fair for Student</div>
               <div class="flex items-center  md:gap-[45px] gap-[10px] md:flex-row flex-col">
                 <div class=" flex items-center gap-2  "> <img class=" h-[18px] w-[18px] mb-1"
                     src="./assets/images/calendar.svg" alt="">
@@ -1055,7 +1055,7 @@
           <div class="flex items-center lg:flex-row flex-col lg:gap-[50px] gap-0">
             <img class="w-[200px] h-auto" src="./assets/images/scratch.png" alt="">
             <div class="flex flex-col gap-5 ">
-              <div class="text-night family-medium text-[26px] text-center">Write A Novel Outline From Scratch</div>
+              <div class="text-night family-medium text-[26px] md:text-start text-center">Write A Novel Outline From Scratch</div>
               <div class="flex items-center md:gap-[45px] gap-[10px] md:flex-row flex-col">
                 <div class=" flex items-center gap-2  "> <img class=" h-[18px] w-[18px] mb-1"
                     src="./assets/images/calendar.svg" alt="">
@@ -1081,8 +1081,8 @@
     <!-- Real meet Stories Start -->
     <div class="container mx-auto pt-[152px] pb-[120px]">
       <div class="text-center">
-        <h2 class="text-[40px] family-medium text-white mb-3">Meet Our Professional Mentors</h2>
-        <p class="text-xl family-normal text-white mb-14">Consectetur adipiscing elit sed do eiusmod tempor incididunt
+        <h2 class="text-[40px] family-medium text-night mb-3">Meet Our Professional Mentors</h2>
+        <p class="text-xl family-normal text-night mb-14">Consectetur adipiscing elit sed do eiusmod tempor incididunt
           ut labore et dolore</p>
       </div>
       <div class="meetslider">
@@ -1333,7 +1333,7 @@
       </div>
       <div class="meetControls">
         <div
-          class="dots [&>ul]:flex [&>ul]:gap-[5px] [&>ul>li>button]:h-4 [&>ul>li>button]:w-4 [&>ul>li]:text-[0] [&>ul>li>button]:rounded-xl [&>ul>li>button]:bg-white [&>ul>li>button:hover]:bg-mango">
+          class="dots [&>ul]:flex [&>ul]:gap-[5px] [&>ul>li>button]:h-4 [&>ul>li>button]:w-4 [&>ul>li]:text-[0] [&>ul>li>button]:rounded-xl [&>ul>li>button]:bg-[#EAEAEA] [&>ul>li>button:hover]:bg-mango">
         </div>
       </div>
     </div>
@@ -1341,13 +1341,13 @@
     <!-- Real Student Stories Start -->
     <div class="container mx-auto pb-[120px]">
       <div class="text-center">
-        <h2 class="text-[40px] family-medium text-white mb-3">What’s Our Real Students Stories</h2>
-        <p class="text-xl family-normal text-white mb-14">Let's Learn together</p>
+        <h2 class="text-[40px] family-medium text-night mb-3">What’s Our Real Students Stories</h2>
+        <p class="text-xl family-normal text-night mb-14">Let's Learn together</p>
       </div>
       <div class="studentslider">
         <!-- Items -->
         <div
-          class="pt-[30px] pb-[50px] ps-[30px] pe-[40px] bg-white rounded-xl relative before:absolute before:bottom-[-10px] before:h-[60px] before:w-[60px] before:rounded-sm  before:rotate-[45deg] before:z-50">
+          class="pt-[30px] pb-[50px] ps-[30px] pe-[40px] bg-shell rounded-xl relative before:absolute before:bottom-[-10px] before:h-[60px] before:w-[60px] before:rounded-sm  before:rotate-[45deg] before:z-50">
           <div class="flex justify-between items-center">
             <div class="flex gap-5 items-center">
               <div class="rounded-full">
@@ -1368,7 +1368,7 @@
             labore quod pariatur error, amet distinctio.
           </div>
         </div>
-        <div class="pt-[30px] pb-[50px] ps-[30px] pe-[40px] bg-white rounded-xl">
+        <div class="pt-[30px] pb-[50px] ps-[30px] pe-[40px] bg-shell rounded-xl">
           <div class="flex justify-between items-center">
             <div class="flex gap-5 items-center">
               <div class="rounded-full">
@@ -1490,8 +1490,8 @@
     <!--  blogs -->
     <div class="container mx-auto py-40">
       <div class="text-center">
-        <h2 class="text-[40px] family-medium text-white mb-3">Get our every news & blogs</h2>
-        <p class="text-xl family-normal text-white mb-14">Latest form news</p>
+        <h2 class="text-[40px] family-medium text-night mb-3">Get our every news & blogs</h2>
+        <p class="text-xl family-normal text-night mb-14">Latest form news</p>
       </div>
       <div class="grid grid-cols-12 gap-6">
         <div class="lg:col-span-4 md:col-span-6 col-span-12 ">
